Rename and updating the reademe